# swf-processing-agent

./: .gitignore  CLAUDE.md  README.md  my_script.sh  pyproject.toml  pytest.ini  run_tests.sh  setup.py
attic/: README.md  my_script.sh
processing/: README.md  __init__.py  my_script.sh  processing.py
simulator/: README.md  procesing_simulator.py  processing_simulator.py
src/swf_processing_agent/: __init__.py  main.py
stf_processing/: README.md  mq_receiver_panda_submission.py  run_daqsim.py  submitjobs.py
tests/: conftest.py  test_main.py
